tests/fail/enum-syntax.stderr
error: Failed to parse struct variant input: expected `,`
 --> $DIR/enum-syntax.rs:5:9
  |
5 |     Circle { x: i32, y: i32 },
  |            ^^^^^^^^^^^^^^^^^^

error: Failed to parse struct variant input: expected `,`
  --> $DIR/enum-syntax.rs:11:9
   |
11 |     Circle { x: i32, y: i32 },
   |            ^^^^^^^^^^^^^^^^^^
